--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=vehicle-tracking
+
+
+# MySQL Setup
+spring.datasource.url=jdbc:mysql://localhost:3306/bank
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Optional: Driver class name (Spring Boot usually detects it)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate (JPA) Properties - optional but recommended
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#JWT setup
+jwt.secret= MySuperSecureKey1234567890!@#$%&*()_+==
+jwt.duration=360000
